<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/main"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:orientation="vertical"-->
<!--    android:padding="16dp"-->
<!--    tools:context=".MainActivity">-->



<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#4CAF50"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_bar_main"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center" />
    </androidx.appcompat.widget.Toolbar>

    <!--첫 번째 행 -->
    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pl_temp"
        android:textSize="16sp"
        android:textColor="#333333"
        android:layout_margin="15dp" />
    <TextView
        android:id="@+id/tv_humi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pl_humi"
        android:textSize="16sp"
        android:textColor="#333333"
        android:layout_margin="15dp" />
    <TableLayout
        android:id="@+id/table_sensors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:padding="8dp">

        <!--첫 번째 행 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pl1_status"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:background="@drawable/header_border"
                android:elevation="2dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pl2_status"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:background="@drawable/header_border"
                android:elevation="2dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pl3_status"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:background="@drawable/header_border"
                android:elevation="2dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pl4_status"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:background="@drawable/header_border"
                android:elevation="2dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pl5_status"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:background="@drawable/header_border"
                android:elevation="2dp"/>
        </TableRow>

        <!--두 번째 행 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_pl1_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="--"
                android:textSize="12sp"
                android:textColor="#333333"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:background="@drawable/border"
                android:elevation="2dp" />
            <TextView
                android:id="@+id/tv_pl2_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="--"
                android:textSize="14sp"
                android:textColor="#333333"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:background="@drawable/border"
                android:elevation="2dp" />
            <TextView
                android:id="@+id/tv_pl3_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="--"
                android:textSize="14sp"
                android:textColor="#333333"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:background="@drawable/border"/>
            <TextView
                android:id="@+id/tv_pl4_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="--"
                android:textSize="14sp"
                android:textColor="#333333"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:background="@drawable/border"
                android:elevation="2dp" />
            <TextView
                android:id="@+id/tv_pl5_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="--"
                android:textSize="14sp"
                android:textColor="#333333"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:background="@drawable/border"
                android:elevation="2dp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tv_pl_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pl_space"
        android:textSize="16sp"
        android:textColor="#333333"
        android:layout_margin="15dp" />

    <TextView
        android:id="@+id/tv_gate_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pl_gate"
        android:textSize="16sp"
        android:textColor="#333333"
        android:layout_margin="15dp" />

    <TextView
        android:id="@+id/tv_flame_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pl_flame"
        android:textSize="16sp"
        android:textColor="#333333"
        android:layout_margin="15dp" />


</LinearLayout>

